# GammaRay

client/: remotemodel.cpp  remotemodel.h
core/: objecttreemodel.h  probe.cpp  probe.h  singlecolumnobjectproxymodel.cpp  singlecolumnobjectproxymodel.h
core/tools/metaobjectbrowser/: metaobjectbrowser.cpp  metaobjectbrowser.h  metaobjecttreemodel.cpp  metaobjecttreemodel.h
core/tools/objectinspector/: inboundconnectionsmodel.cpp  inboundconnectionsmodel.h  objectinspector.cpp  objectinspector.cpp.autosave  objectinspector.h  outboundconnectionsmodel.cpp  outboundconnectionsmodel.h
plugins/: CMakeLists.txt
plugins/connectivityinspector/: CMakeLists.txt  acquisitioncontroller.cpp  acquisitioncontroller.h  acquisitionengine.cpp  acquisitionengine.h  acquisitioninterface.cpp  acquisitioninterface.h  acquisitionwidget.cpp  acquisitionwidget.h  acquisitionwidget.ui  clustermodel.cpp  clustermodel.h  connectionmodel.cpp  connectionmodel.h  connectiontypemodel.cpp  connectiontypemodel.h  connectivityinspector.cpp  connectivityinspector.h  connectivityinspectorclient.cpp  connectivityinspectorclient.h  connectivityinspectorcommon.cpp  connectivityinspectorcommon.h  connectivityinspectorinterface.cpp  connectivityinspectorinterface.h  connectivityinspectormodel.cpp  connectivityinspectormodel.h  connectivityinspectorwidget.cpp  connectivityinspectorwidget.h  connectivityinspectorwidget.ui  countdecoratorproxymodel.cpp  countdecoratorproxymodel.h  discriminatorinterface.cpp  discriminatorinterface.h  discriminatorproxymodel.cpp  discriminatorproxymodel.h  edgemodel.cpp  edgemodel.h  filtercontroller.cpp  filtercontroller.h  filterinterface.cpp  (+39 more)
plugins/connectivityinspector/gv/: gvgraphicsview.cpp  gvpanel.cpp  gvpanel.h  gvrenderer.h  gvwidget.cpp
plugins/connectivityinspector/vtk/: vtkcommon.cpp  vtkcontainer.cpp  vtkcontainer.h  vtkgraphadapter.cpp  vtkgraphadapter.h  vtkwidget.cpp  vtkwidget.h
plugins/eventmonitor/: connectiontypemodel.cpp  connectiontypemodel.h  eventmonitorclient.h  eventmonitorwidget.cpp  eventmonitorwidget.h  eventmonitorwidget.ui
plugins/objectvisualizer/: CMakeLists.txt  connectiontypemodel.cpp  connectiontypemodel.h  gammaray_objectvisualizer.json  gvcontainer.cpp  gvcontainer.h  gvgraphicsview.cpp  gvgraphicsview.h  gvpanel.cpp  gvpanel.h  gvrenderer.cpp  gvrenderer.h  gvwidget.cpp  gvwidget.h  objectvisualizer.cpp  objectvisualizer.h  objectvisualizerclient.cpp  objectvisualizerclient.h  objectvisualizercommon.cpp  objectvisualizercommon.h  objectvisualizerinterface.cpp  objectvisualizerinterface.h  objectvisualizermodel.cpp  objectvisualizermodel.h  objectvisualizerwidget.cpp  objectvisualizerwidget.h  objectvisualizerwidget.old.cpp  objectvisualizerwidget.ui  recordingclient.cpp  recordingclient.h  recordinginterface.cpp  recordinginterface.h  recordingproxymodel.cpp  recordingproxymodel.h  vtkcommon.cpp  vtkcommon.h  vtkcontainer.cpp  vtkcontainer.h  vtkpanel.cpp  vtkpanel.h  (+2 more)
plugins/positioning/: positioning.cpp
plugins/signalmonitor/: signalhistorymodel.cpp  signalhistorymodel.h  signalmonitorwidget.cpp  signalmonitorwidget.h  signalmonitorwidget.ui
tests/: problemreportertest.cpp
ui/: CMakeLists.txt
ui/graphs/: graphicsitem.cpp  graphicsitem.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h
ui/tools/objectinspector/: objectinspectorwidget.cpp  objectinspectorwidget.h  objectinspectorwidget.ui
